--- a/app/src/main/res/layouts/learn/layout/activity_flashcard.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_flashcard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/flashCardRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,30 +10,29 @@
     android:gravity="top"
     android:layout_gravity="top">
 
-
         <!-- Icon -->
         <ImageView
             android:id="@+id/imgIcon"
-            android:layout_width="156dp"
-            android:layout_height="156dp"
-            android:src="@drawable/ic_paper_plane"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_duo"
             android:contentDescription="Icon"
             android:layout_marginTop="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="128dp" />
+            android:layout_marginBottom="32dp" />
 
         <!-- Word -->
         <TextView
+            android:background="@drawable/bg_word_frame"
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="128dp"
             android:text="Example"
-            android:textSize="48sp"
+            android:textSize="36sp"
             android:textStyle="bold"
-            android:textColor="#5B6268"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-             />
+            android:textColor="#000000"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal" />
         <TextView
             android:id="@+id/tvPhonetic"
             android:layout_width="wrap_content"
@@ -42,40 +42,33 @@
             android:textStyle="bold"
             android:textColor="#6D7379"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="64dp" />
+            android:layout_marginBottom="32dp" />
         <!-- Buttons -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp">
 
-            <Button
-                android:background="@drawable/button_border_1"
-                android:id="@+id/btnCheck"
-                android:layout_width="120dp"
+            <com.google.android.flexbox.FlexboxLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="REVEAL"
-                android:textAllCaps="true"
-                android:backgroundTint="#42A5F5"
-                android:textColor="@android:color/white"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"
-                android:layout_marginEnd="16dp"/>
+                android:layout_margin="2dp"
+                android:padding="8dp"
+                app:flexWrap="wrap"
+                app:justifyContent="space_evenly"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+                <ImageButton
+                    android:id="@+id/btnCheck"
+                    android:layout_width="128dp"
+                    android:layout_height="128dp"
+                    android:layout_marginTop="8dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_view_answer" />
 
-            <Button
-                android:background="@drawable/button_border_1"
-                android:id="@+id/btnContinue"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="CONTINUE"
-                android:textAllCaps="true"
-                android:backgroundTint="#42A5F5"
-                android:textColor="@android:color/white"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"/>
-        </LinearLayout>
+                <ImageButton
+                    android:id="@+id/btnContinue"
+                    android:layout_width="128dp"
+                    android:layout_height="128dp"
+                    android:layout_marginTop="8dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_ic_submit_sentence" />
+            </com.google.android.flexbox.FlexboxLayout>
 
 </LinearLayout>
