--- a/app/src/main/res/layouts/learn/layout/activity_sentence_builder.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_sentence_builder.xml
@@ -59,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvQuestion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/bg_card_white"
         app:flexWrap="wrap"
         app:justifyContent="flex_start"
         android:padding="8dp" />
@@ -80,6 +81,7 @@
         android:padding="8dp"
         app:flexWrap="wrap"
         app:justifyContent="flex_start"
+        android:background="@drawable/bg_card_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hiddenView" />
