--- a/app/src/main/res/layouts/auth/layout/activity_register.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_register.xml
@@ -151,12 +151,13 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/buttonLoginWithGoogle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_ripple_1"
             android:drawableStart="@drawable/ic_google"
             android:paddingHorizontal="80dp"
-            android:text="Đăng ký với Google"
+            android:text="Đăng nhập với Google"
             android:textAllCaps="false"
             android:textSize="14sp"
             android:layout_marginBottom="8dp"
